--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<h1>Demon Honey Evento</h1>
 	<p>
 		<!-- Reemplaza la URL del archivo de Google Sheets con la URL real de tu archivo -->
-		Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1RM4vAkt48pV_iFcX-iiXbKVzwCXwkZnnAU88FZRr3N8/edit?usp=sharing">Nombre del Invitado</a></strong>
+		Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1RM4vAkt48pV_iFcX-iiXbKVzwCXwkZnnAU88FZRr3N8/edit?usp=sharing">Fede</a></strong>
 	</p>
 	<div class="aprobado">Aprobado</div>
 	<div class="location">Palermo, Buenos Aires</div>
