--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
+¡Claro! Aquí está el código actualizado con algunos detalles adicionales de estilo:
+
+php
+Copy code
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Demon Honey Evento</title>
 	<style>
+		body {
+			background-color: #F8F8F8;
+			margin: 0;
+			padding: 0;
+		}
+
+		.container {
+			max-width: 500px;
+			margin: 0 auto;
+			padding: 20px;
+			border: 1px solid #E6E6E6;
+			background-color: #FFFFFF;
+			box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+			border-radius: 5px;
+		}
+
 		h1 {
 			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 			font-style: italic;
 			font-size: 2.5em;
 			text-align: center;
 			color: #FF69B4;
-			margin-top: 20px;
+			margin-top: 0;
+			margin-bottom: 20px;
 		}
 
 		p {
@@ -18,6 +39,7 @@
 			text-align: center;
 			color: #333;
 			margin-top: 10px;
+			margin-bottom: 10px;
 		}
 
 		.aprobado {
@@ -26,6 +48,11 @@
 			text-align: center;
 			color: #00FF00;
 			margin-top: 20px;
+			margin-bottom: 10px;
+			border: 2px solid #00FF00;
+			padding: 10px;
+			border-radius: 5px;
+			display: inline-block;
 		}
 
 		.location {
@@ -34,16 +61,23 @@
 			text-align: center;
 			color: #333;
 			margin-top: 10px;
+			margin-bottom: 20px;
+			border: 2px solid #FF69B4;
+			padding: 10px;
+			border-radius: 5px;
+			display: inline-block;
 		}
 	</style>
 </head>
 <body>
-	<h1>Demon Honey Evento</h1>
-	<p>
-		<!-- Reemplaza la URL del archivo de Google Sheets con la URL real de tu archivo -->
-		Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1RM4vAkt48pV_iFcX-iiXbKVzwCXwkZnnAU88FZRr3N8/edit?usp=sharing">Fede</a></strong>
-	</p>
-	<div class="aprobado">Aprobado</div>
-	<div class="location">Palermo, Buenos Aires</div>
+	<div class="container">
+		<h1>Demon Honey Evento</h1>
+		<p>
+			<!-- Reemplaza la URL del archivo de Google Sheets con la URL real de tu archivo -->
+			Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1ABC12345/edit#gid=0">Fede</a></strong>
+		</p>
+		<div class="aprobado">Aprobado</div>
+		<div class="location">Palermo, Buenos Aires</div>
+	</div>
 </body>
 </html>
