--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Copy code
 		<h1>Demon Honey Evento</h1>
 		<p>
 			<!-- Reemplaza la URL del archivo de Google Sheets con la URL real de tu archivo -->
-			Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1ABC12345/edit#gid=0">Fede</a></strong>
+			Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1ABC12345/edit#gid=0">Federico</a></strong>
 		</p>
 		<div class="aprobado">Aprobado</div>
 		<div class="location">Palermo, Buenos Aires</div>
