--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 <head>
 	<title>Demon Honey Evento</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
+		html {
+			height: 100%;
+		}
+
 		body {
 			background-color: #F8F8F8;
 			margin: 0;
 			padding: 0;
+			min-height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 
 		.container {
@@ -17,13 +26,13 @@
 			background-color: #FFFFFF;
 			box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 			border-radius: 5px;
+			text-align: center;
 		}
 
 		h1 {
 			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 			font-style: italic;
 			font-size: 2.5em;
-			text-align: center;
 			color: #FF69B4;
 			margin-top: 0;
 			margin-bottom: 20px;
@@ -32,7 +41,6 @@
 		p {
 			font-family: 'Roboto', Arial, Helvetica, sans-serif;
 			font-size: 1.5em;
-			text-align: center;
 			color: #333;
 			margin-top: 10px;
 			margin-bottom: 10px;
@@ -41,7 +49,6 @@
 		.aprobado {
 			font-family: 'Montserrat', sans-serif;
 			font-size: 1.2em;
-			text-align: center;
 			color: #00FF00;
 			margin-top: 20px;
 			margin-bottom: 10px;
@@ -53,8 +60,7 @@
 
 		.location {
 			font-family: 'Open Sans', sans-serif;
-			font-size: 1.2em;
-			text-align: center;
+			font-size: 1.0em;
 			color: #333;
 			margin-top: 10px;
 			margin-bottom: 20px;
@@ -70,7 +76,7 @@
 		<h1>Demon Honey Evento</h1>
 		<p>
 			<!-- Reemplaza la URL del archivo de Google Sheets con la URL real de tu archivo -->
-			Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1ABC12345/edit#gid=0">Federico</a></strong>
+			Nombre de invitado: <strong><a href="https://docs.google.com/spreadsheets/d/1RM4vAkt48pV_iFcX-iiXbKVzwCXwkZnnAU88FZRr3N8/edit?usp=sharing">Federico</a></strong>
 		</p>
 		<div class="aprobado">Aprobado</div>
 		<div class="location">Palermo, Buenos Aires</div>
