--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			padding: 20px;
 			border-radius: 8px;
 			display: inline-block;
-			background-color: #008cff;
+			background-color: #00e029;
 			box-shadow: 0px 5px 10px rgba(0, 140, 255, 0.2);
 			text-transform: uppercase;
 			letter-spacing: 2px;
@@ -82,6 +82,13 @@
 			text-align: left;
 			line-height: 1.5;
 		}
+		.horario {
+  			font-family: 'Roboto', Arial, Helvetica, sans-serif;
+			font-size: 0.8em;
+  			color: #777;
+  			margin-top: 10px;
+ 			margin-bottom: 10px;
+		}
 
 		a {
 			text-decoration: none;
@@ -98,6 +105,7 @@
 		</p>
 		<div class="aprobado">Aprobado</div>
 		<div class="location">Palermo, Buenos Aires</div>
+		<p class="horario">Horario 20:00hs - 02:00hs</p>
 	</div>
 </body>
 </html>
