--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<div class="aprobado">Aprobado</div>
 		<div class="location">Palermo, Buenos Aires</div>
 		<p class="horario">Horario 20:00hs - 02:00hs</p>
+		<img src="C:\Users\User\Downloads\fueguito_emoji-removebg-preview.png" alt="Logo" style="position: absolute; bottom: 0; right: 0; max-height: 80px;">
 	</div>
 </body>
 </html>
